<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Big O</string>
    <string name="my_email">Email</string>
    <string name="complexity">Complexity</string>
    <string name="email_address">Email Address</string>
    <string name="email_subject">Email Subject</string>
    <string name="data_structure">Data Structure</string>
    <string name="operation">Operations</string>
    <string name="minCheck">Get Min</string>
    <string name="insertCheck">Insert</string>
    <string name="searchCheck">Search</string>
    <string name="case_option">Case</string>
    <string name="average_case">Average Case</string>
    <string name="worst_case">Worst Case</string>
    <string name="result">Result</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="action">Action</string>


    <string-array name="data_structures">
        <item>Binary Search Tree</item>
        <item>2–3 Tree</item>
        <item>Linked List</item>
        <item>Hash Table</item>
        <item>Min Heap</item>
    </string-array>

</resources>


